--- a/otp.html
+++ b/otp.html
@@ -1,7 +1,5 @@
 <link rel="stylesheet" href="./css/style.css">
 
- <!-- <a href="index.html"></a> -->
-
 <div class="login">
     <div class="login-triangle"></div>
     
@@ -9,7 +7,7 @@
   
     <form class="login-container">
       <p><input type="otp" id="otp" placeholder="Enter OTP"></p>
-      <p><input type="submit" onclick="verify()" value="verify"></p>
+      <p><input type="button" onclick="verify()" value="verify"></p>
     </form>
   </div>
 
