--- a/log-in.html
+++ b/log-in.html
@@ -9,9 +9,9 @@
   
     <form class="login-container">
       <p><input type="email" id="email" placeholder="Email"></p>
-      <p><input type="password" id="pass" placeholder="Password"></p>
+      <p><input type="text" id="pass" placeholder="Password"></p>
       <a href="forget-pass.html">Forgot Password</a>
-      <p><input type="submit" onclick="login()" value="Log in"></p>
+      <p><input type="button" onclick="login()" value="Log in"></p>
     </form>
   </div>
 
