--- a/pass.html
+++ b/pass.html
@@ -10,7 +10,7 @@
     <form class="login-container">
       <p><input type="otp" id="pass" placeholder="New Password"></p>
       <p><input type="otp" id="cpass" placeholder="Confirm Password"></p>
-      <p><input type="button" onclick="login()" value="Login"></p>
+      <p><input type="button" onclick="login()" value="Change Password"></p>
     </form>
   </div>
 
