--- a/register.html
+++ b/register.html
@@ -9,9 +9,9 @@
     <form class="login-container">
       <p><input type="name" id="name" placeholder="Name"></p>
       <p><input type="email" id="email" placeholder="Email"></p>
-      <p><input type="password" id="pass" placeholder="Password"></p>
-      <p><input type="Comfirm password" id="cpass" placeholder="Comfirm Password"></p>
-      <p><input type="submit" onclick="save()" value="Sign Up"></p>
+      <p><input type="text" id="pass" placeholder="Password"></p>
+      <p><input type="text" id="cpass" placeholder="Comfirm Password"></p>
+      <p><input type="button" onclick="save()" value="Sign Up"></p>
     </form>
   </div>
 
