--- a/forget-pass.html
+++ b/forget-pass.html
@@ -3,7 +3,7 @@
 <div class="login">
    <div class="login-triangle"></div>
    
-   <h2 class="login-header">Lost Password1</h2>
+   <h2 class="login-header">Lost Password</h2>
  
    <form class="login-container">
      <p><input type="text" id="email" placeholder="Email"></p>
