--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         
     </div>
 </div>
-<script href="watch.js"></script>
+
+<script src="./watch.js"></script>
 
 <script type="text/javascript">
 
