--- a/pass.html
+++ b/pass.html
@@ -19,7 +19,7 @@
     let checkotp = JSON.parse(localStorage.getItem('otp'));
     if(!checkotp){
         alert("Lalla OTP Dal");
-        window.location.href = "index.html";
+        window.location.href = "forget-pass.html";
     }
 
     const login = () =>{
