--- a/log-in.html
+++ b/log-in.html
@@ -18,6 +18,14 @@
 
   
   <script type="text/javascript">
+
+    let checkUserLogOut = JSON.parse(localStorage.getItem('checkUserLogin'))
+
+    if(checkUserLogOut){
+        alert("Lalla Log Out karle");
+        window.location.href = "index.html";
+    }
+
     function login() {
         let email = document.getElementById('email').value;
         let pass = document.getElementById('pass').value;
