--- a/register.html
+++ b/register.html
@@ -11,6 +11,9 @@
       <p><input type="email" id="email" placeholder="Email"></p>
       <p><input type="text" id="pass" placeholder="Password"></p>
       <p><input type="text" id="cpass" placeholder="Comfirm Password"></p>
+      <a href="index.html">
+        <p><input type="button" value="LogIn"></p>
+      </a>
       <p><input type="button" onclick="save()" value="Sign Up"></p>
     </form>
   </div>
